# usv-gui

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  oglwidget.cpp  oglwidget.h
.github/workflows/: codeql-analysis.yml  release-build-mingw.yml  release-build.yml
docker/: windows.docker
modules/: FindGeographicLib.cmake
scripts/: build-win.ps1
src/: App.cpp  App.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Compass.cpp  Compass.h  Defines.h  MyScreen.cpp  MyScreen.h  Program.cpp  Program.h  earcut.h  glgrid.cpp  glgrid.h  glmap.cpp  glmap.h  glpaths.cpp  glpaths.h  glrestrictions.cpp  glrestrictions.h  glsea.cpp  glsea.h  glvessels.cpp  glvessels.h  main.cpp  main.rc  mainwindow.cpp  mainwindow.h  mainwindow.ui  oglwidget.cpp  oglwidget.h  path_appearance.cpp  path_appearance.h  provider.h  resources.qrc  sea_appearance.cpp  sea_appearance.h  skybox.cpp  skybox.h  (+8 more)
src/glsl/: atmosphere.glsl  general.vert  glsea.frag  glsea.vert  ocean.glsl  restrictions.frag  vessels.frag  vessels.vert
src/resource/: font.fnt  usv-gui.desktop
src/ui/: IgnorantTextBox.h  ScrollableSlider.cpp  ScrollableSlider.h  SettingsWindow.cpp  SettingsWindow.h
src/usvdata/: Angle.cpp  Angle.h  CMakeLists.txt  CaseData.cpp  CaseData.h  CurvedPath.h  Defines.h  FeatureCollection.h  Frame.cpp  Frame.h  InputDataJsonDefines.h  InputTypes.h  InputUtils.cpp  InputUtils.h  Path.cpp  Path.h  RTree.cpp  RTree.h  Restrictions.cpp  Restrictions.h  UsvRun.cpp  UsvRun.h  Vector2.h
toolchains/: Toolchain-cross-mingw32-linux.cmake
usvdata/: Angle.cpp  CMakeLists.txt  CaseData.cpp  CaseData.h  CurvedPath.cpp  CurvedPath.h  Defines.h  Frame.cpp  Frame.h  Geometry.cpp  Geometry.h  InputTypes.cpp  InputTypes.h  InputUtils.cpp  InputUtils.h  Path.cpp  Path.h
usvdata/include/: cxxopts.h
